fix video info spacing

--- a/src/components/shared/Video/Video.scss
+++ b/src/components/shared/Video/Video.scss
@@ -43,7 +43,7 @@
 		li {
 			display: inline-block;
 			font-size: 12px;
-			margin: 0 2px;
+			margin-right: 2px;
 
 			&:after {
 				content: " \002022  ";
